# avm

./: CMakeLists.txt  LICENSE  README.md  main.c
vm/: vm.c  vm.h
vm/interpreter/: frame.c  frame.h  interpreter.c  interpreter.h  stack.c  value.h  vars.c  vars.h
vm/loader/: class.c  class.h  loader.c  loader.h  project.c  project.h
vm/loader/constpool/: const.c  const.h  constpool.c  constpool.h  method.c  method.h  nametype.c  nametype.h  string.c  string.h  utf8.c  utf8.h
vm/loader/methods/: attribute.c  attribute.h  attributes.c  attributes.h  method.c  method.h  methods.c  methods.h
vm/runtime/: frame.c  frame.h  stack.h  value.c  value.h
